--- a/css/bytom.css
+++ b/css/bytom.css
@@ -1,8 +1,6 @@
 .header-video-module{
+  width: 100%;
   height: 800px;
-  width: 1920px;
-  min-height: 800px;
-  max-height: 1080px;
 }
 .homeTitle{
   margin-top: 250px;
@@ -18,7 +16,6 @@
 }
 .bytom-block-title span{
   color: #035BD4;
-  font-size: 32px;
 }
 .reward-img{
   width: 540px;
@@ -65,7 +62,7 @@
 }
 .highlight{
   background: #f8f8f8;
-  padding-bottom: 0;
+  /* padding-bottom: 0; */
 }
 .note{
   width: 816px;
@@ -86,7 +83,23 @@
   margin-bottom: 40px;
 }
 
-
+@media (max-width: 767px) {
+  .bytom-block-title{
+    font-size: 22px;
+  }
+  .reward-img{
+    width: 100%;
+    height: auto;
+    padding: 0 16px;
+  }
+  .des{
+    width: 100%;
+  }
+  .note{
+    width: 100%;
+    padding: 30px 16px;
+  }
+}
 
 
 
